@@ -41,10 +41,7 @@ end
 Facter.add(:operatingsystemrelease) do
     confine :operatingsystem => %w{Debian}
     setcode do
-        release = Facter::Util::Resolution.exec('cat /proc/version')
-            if release =~ /\(Debian (\d+.\d+).\d+-\d+\)/
-                $1
-            end
+        release = Facter::Util::Resolution.exec('cat /etc/debian_version')
      end
 end
 
